--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,97 @@
-html, body
-{
+/* backdrop ------------------------*/
+
+html, body {
     height: 100%;
     background: linear-gradient(#cbd1dd, #cbd1dd, white); /* Standard syntax */
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 .container {
     width: 800px;
-    height: 1200px;
+    height: 1250px;
     margin: 0 auto;
     background-color: white;
     box-shadow: 5px 5px 10px gray;
 }
+
+/*--------------------------------------*/
+
+section, #disclaimer {
+    width: 430px;
+    float: left;
+}
+
+header, section, footer {
+    margin-left: 50px;
+}
+
+#baycoast_logo {
+    margin: 30px 0 0 40px;
+}
+
+#mass_save_logo {
+    float: right;
+    margin: 0 40px 0 30px;
+}
+
+#button {
+    float: right;
+    margin: 40px 60px 20px 0;
+    padding: 15px 30px 15px 30px;
+    background: linear-gradient(#d38f06, #f6bb45);
+    border-radius: 10px;
+    color: white;
+    font-weight: bold;
+    letter-spacing: 1.5px;
+}
+
+#button:hover {
+    box-shadow: 2px 2px 5px #5b3d01 inset;
+    cursor: pointer;
+    transition: all .2s;
+}
+
+h1 {
+    text-transform: uppercase;
+    color: #014079;
+    font-size: 30px;
+}
+
+span {
+    color: #064081;
+    font-weight: bold;
+    display: block;
+    margin-bottom: -16px;
+}
+
+#disclaimer {
+    float: left;
+}
+
+
+/* list item reset ------------------*/
+
+ul {
+    list-style: none;
+    padding:0;
+    margin:0;
+}
+
+li { 
+    line-height: 2.0;
+}
+
+li:before {
+    content: "• ";
+    color: #d28b06; 
+}
+
+/*-----------------------------------*/
+
+
+
+
 
 
 
