--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ html, body {
 
 .container {
     width: 800px;
-    height: 1450px;
+    height: 1470px;
     margin: 0 auto;
     background-color: white;
     box-shadow: 5px 5px 10px gray;
@@ -80,6 +80,12 @@ span {
     margin: 90px 30px 0px 0px;
 }
 
+.highlight {
+    background-color: #ccd2de;
+    padding: 10px;
+    border-radius: 10px;
+}
+
 #image-spread {
     float: right;
     margin-top: 50px;
@@ -103,6 +109,10 @@ span {
     transform:rotate(-15deg);
     -ms-transform:rotate(-15deg); /* IE 9 */
     -webkit-transform:rotate(-15deg); /* Safari and Chrome */
+}
+
+hr {
+    width: 100%;
 }
 
 #costs {
