--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ html, body {
     margin: 0 auto;
     background-color: white;
     box-shadow: 5px 5px 10px gray;
+    overflow: hidden;
 }
 
 /*--------------------------------------*/
@@ -31,7 +32,7 @@ header, section, footer {
 }
 
 #disclaimer {
-    margin-top: 135px;
+    margin-top: 190px;
     font-size: 10px;
 }
 
@@ -49,6 +50,7 @@ header, section, footer {
     color: white;
     font-weight: bold;
     letter-spacing: 1.5px;
+    transition: all 1.0s;
 }
 
 #button:hover {
@@ -78,6 +80,10 @@ span {
     float: right;
     width: 250px;
     margin: 90px 30px 0px 0px;
+    border: 3px solid #f6bb45;
+    padding: 5px;
+    border-radius: 5px;
+    clear: ;
 }
 
 .highlight {
